[package]
name = "rustic-raycaster"
version = "0.1.0"
authors = ["Maxime Augier <max@xolus.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
multiarray = { path = "../multiarray" }
image = "0.23"
either = "1.6"
